--- a/Externals.cfg
+++ b/Externals.cfg
@@ -3,7 +3,7 @@ schema_version = 1.0.0
 
 [global-workflow]
 protocol = git
-repo_url = https://github.com/NOAA-EMC/global-workflow/
-branch = develop
+repo_url = https://github.com/ulmononian/global-workflow.git
+branch = feature/manage_externals
 local_path = global-workflow
 required = True
